--- a/assets/stylesheets/globals/_variables.scss
+++ b/assets/stylesheets/globals/_variables.scss
@@ -1,5 +1,34 @@
 
-// Vertical Rhythm
-$base-font-size: 13px;
-$base-line-height: 24px;
-@include establish-baseline();
+$color1 : #000000;
+$color2 : #ffffff;
+$color3: #D74401; //header border color
+
+//font-size
+$font_size:13px;
+
+//header sizes
+$h1_size  : $font_size+9px;
+$h2_size  : $font_size+6px;
+
+//background
+$background1 :#90d5f2;
+$background2 :#ffffff;
+
+
+// borders
+$border1: 1px solid $color3;
+
+// border radius
+$border_radius: 5px;
+
+// gradients
+
+$grad1: linear-gradient($background2 0, shade($background2, 20%) 100%); //header bottom
+
+
+// text shadow
+$text_shadow: 0 -1px rgba(0,0,0,0.9);
+
+
+// spacing
+$spacing: 10px;
