--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -1,14 +1,27 @@
 // Reset file for standardizing the page
 // @import "globals/_reset";
 
+
+
+// Bourbon
+@import "globals/bourbon/_bourbon";
+
+
+// File for global Uranium stylings
+@import "globals/_uranium";
+
+// Site wide variables
+@import "globals/_variables";
+
+
+
+//import lib file
+@import "globals/_lib";
+
 // Base file contains all the global styles
 @import "globals/_base";
 
-// File for global Uranium stylings
-@import "globals/_uranium.scss";
 
-// Site wide variables
-@import "globals/_variables.scss";
 
 // Header & Footer
 @import "sections/_header";
