--- a/assets/stylesheets/pages/_home.scss
+++ b/assets/stylesheets/pages/_home.scss
@@ -34,12 +34,12 @@
 							margin: 0 0 0 5px;
 							float: left;
 							.summer{
-								background: image-url("icons-season.GIF") 0 0 no-repeat;
+								background: image-url("season.gif") 0 0 no-repeat;
 								padding: 0 0 0 16px;
 								height: 24px;
 							}
 							.winter{
-								background: image-url("icons-season.GIF") 0 -24px no-repeat;
+								background: image-url("season.gif") 0 -24px no-repeat;
 								padding: 0 0 0 16px;
 								height: 24px;
 							}
