--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -31,3 +31,4 @@
 @import "pages/_home";
 @import "pages/_cluboverview";
 @import "pages/_info-service";
+@import "pages/contact/_informationClubMagicLife";
