--- a/assets/stylesheets/pages/contact/_informationClubMagicLife.scss
+++ b/assets/stylesheets/pages/contact/_informationClubMagicLife.scss
@@ -17,7 +17,7 @@
 			margin-bottom: 24px;
 			h2 {
 				display: block;
-				font-size: 1.5em;
+				font-size: $h2_size;
 				font-weight: bold;
 			}
 		}
