--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -32,3 +32,4 @@
 @import "pages/_cluboverview";
 @import "pages/_info-service";
 @import "pages/contact/_informationClubMagicLife";
+@import "pages/contact/_general-enquiry";
