--- a/assets/stylesheets/pages/contact/_customer-request.scss
+++ b/assets/stylesheets/pages/contact/_customer-request.scss
@@ -74,6 +74,7 @@
 						background: image-url("page-sprite.png") 0 -1570px no-repeat;
 						width: 73px;
 						color: #545454;
+						font-size: $date_font;
 					}
 					input.textwide {
 						background: image-url("page-sprite.png")  no-repeat scroll 0 -1537px transparent;
