--- a/assets/stylesheets/globals/_variables.scss
+++ b/assets/stylesheets/globals/_variables.scss
@@ -5,6 +5,7 @@ $color3: #D74401; //header border color
 
 //font-size
 $font_size:13px;
+$date_font:12px;
 
 //header sizes
 $h1_size  : $font_size+9px;
