--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -42,3 +42,4 @@
 @import "pages/contact/_general-enquiry";
 @import "pages/contact/_booking_inquiry";
 @import "pages/contact/_customer-request";
+@import "pages/contact/_team-vienna";
