--- a/assets/stylesheets/pages/_home.scss
+++ b/assets/stylesheets/pages/_home.scss
@@ -19,6 +19,29 @@
 				}
 			}
 			.box-form{
+				/*#tab-1 form{	
+					.field{
+						.row{
+							.col{
+								.row{
+									//a{
+										.datepicker {
+											position: relative;
+											float: left;
+											margin: 2px 0 0;
+											background:  image-url("ico-table.gif") no-repeat;
+											width: 18px;
+											height: 20px;
+											text-indent: -9999px;
+											overflow: hidden;
+										}
+									//}
+								}
+							}
+						}
+					}
+				
+				}*/
 				
 				#tab-2 form {
 					#mySelectText0{
@@ -239,6 +262,7 @@
 					}
 			
 			}
+			
 		}
 		
 	
