--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -18,6 +18,8 @@
 //import lib file
 @import "globals/_lib";
 
+@import "globals/_sprites";
+
 // Base file contains all the global styles
 @import "globals/_base";
 
