--- a/assets/stylesheets/pages/contact/_team-vienna.scss
+++ b/assets/stylesheets/pages/contact/_team-vienna.scss
@@ -4,7 +4,7 @@
 		padding:1%;
 		margin:1%;
 		#c5882{
-			background-color:#f7f3e7;
+			background-color:$background4;
 			margin: 1%;
 			padding: 0;
 			border: 0;
