--- a/assets/stylesheets/globals/_lib.scss
+++ b/assets/stylesheets/globals/_lib.scss
@@ -1,7 +1,10 @@
 @mixin footer {
  
-  background-color: $background1;
+  //background-color: $background2;
+  background: none repeat scroll 0 0 #FDC400;
   border: 1px solid $color1;
+  border-radius: 5px 5px 5px 5px;
+  //@include background($grad1);
   min-height: 40px;
   padding: 0px;
   color: $color1;
@@ -18,7 +21,7 @@
 
 @mixin grad1 {
   @include grad_base;
-  @include background($grad1);
+  //@include background($grad1);
   //border-top: $border1;
   padding: 0;
 }
@@ -29,4 +32,23 @@
   color: $color1;
   font-weight: normal;
   text-shadow: $text_shadow;
+}
+@mixin ul-webkit-padding{
+	-webkit-padding-start: 0px;
+	-webkit-margin-before: 0em;
+	-webkit-margin-after: 0em;
+}
+@mixin ul-border-radius-padding{
+border-radius: 5px 5px 5px 5px;
+padding: 2px 0 0;
+overflow: hidden;
+}
+@mixin contact-basic{
+	background-color:$background4;
+	margin: 1%;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
