--- a/assets/stylesheets/pages/_home.scss
+++ b/assets/stylesheets/pages/_home.scss
@@ -6,15 +6,20 @@
 	}
 	.main-holder{
 		#sidebar{
+			margin-top:1%;
 			.ui-inline{
-				margin-top:40px;
+				//margin-top:40px;
 				background:#f4e9d5;
+				border :1px solid #7E7676;
+				border-radius: 5px 5px 5px 5px;
 				li{
 					display: inline;
 					padding-left:$spacing;
 					
 					a{
 						font-size : $h2_size;
+						text-decoration:none;
+						
 					}
 				}
 			}
@@ -47,7 +52,14 @@
 					#mySelectText0{
 						display:none;
 					}
+					fieldset{
+						border: 0;
+					}
+					.field:first-child {
+						background: none;
+					}
 					.field{
+						background: image-url("bg-field.gif") repeat-x 0 0;
 						padding: 7px 0 11px;
 						width: 100%;
 						overflow: hidden;
@@ -125,7 +137,7 @@
 						color:black;
 						font-size:$h2_size;
 						font-weight:bold !important;
-						background:#e6e6e6;
+						background:$background3;
 						&:before {
 						  margin-top: -7px;
 						  margin-left: -20px;
@@ -136,7 +148,7 @@
 						> .menu_indicator {
 							  float: right;
 						}
-						border: 1px solid #5f0f02;
+						border: $border2;
 						font-size: 14px;
 						padding: 11px 10px 10px;
 						margin: 0;
@@ -145,24 +157,27 @@
 						&[data-ur-state="disabled"]{
 							
 						  > .menu_indicator {
-							background: image-url("plus.png") no-repeat 95% center;
-							width: 20px;
-							height: 20px;
+							//background: image-url("plus.png") no-repeat 95% center;
+							//width: 20px;
+							//height: 20px;
+							@extend .sprites-plus;
+
 						  }
 						}
 						&[data-ur-state="enabled"]{
 						  > .menu_indicator {
-							background: image-url("minus.png") no-repeat 95% center;
-							width: 13px;
-							height: 13px;
+							//background: image-url("minus.png") no-repeat 95% center;
+							//width: 13px;
+							//height: 13px;
+							@extend .sprites-minus;
 						 }
 						}
 					}
 					#life-advantages{
-						background-color: #e6e6e6;
-						border-left: 1px solid #5f0f02;
-						border-right: 1px solid #5f0f02;
-						border-bottom: 1px solid #5f0f02;
+						background-color: $background3;
+						border-left: $border2;
+						border-right: $border2;
+						border-bottom: $border2;
 						border-radius: 0 0 5px 5px;
 						&[data-ur-state="enabled"]{
 							>p{
@@ -173,16 +188,18 @@
 							}
 						}
 						ul{
-							-webkit-padding-start: 0px;
-							-webkit-margin-before: 0em;
-							-webkit-margin-after: 0em;
-							border-radius: 0 0 5px 5px;
-							padding: 2px 0 0;
-							overflow: hidden;
+							//-webkit-padding-start: 0px;
+							//-webkit-margin-before: 0em;
+							//-webkit-margin-after: 0em;
+							@include ul-webkit-padding;
+							@include ul-border-radius-padding;
+							//border-radius: 0 0 5px 5px;
+							//padding: 2px 0 0;
+							//overflow: hidden;
 							li{
 								display: block;
 								width: 100%;
-								border-bottom: 1px solid #5f0f02;
+								border-bottom: $border2;
 								padding: 11px 20px 9px;
 								color: #3D211A;
 								font-size: $font_size;
@@ -202,7 +219,7 @@
 						color:black;
 						font-size:$h2_size;
 						font-weight:bold !important;
-						background:#e6e6e6;
+						background:$background3;
 						&:before {
 						  margin-top: -7px;
 						  margin-left: -20px;
@@ -213,45 +230,46 @@
 						> .menu_indicator {
 							  float: right;
 						}
-						border: 1px solid #5f0f02;
+						border: $border2;
 						font-size: 14px;
 						padding: 11px 10px 10px;
 						margin: 0;
 						border-radius: $border_radius;
 						
 						&[data-ur-state="disabled"]{
-							
 						  > .menu_indicator {
-							background: image-url("plus.png") no-repeat 95% center;
-							width: 20px;
-							height: 20px;
-						  }
+								//background: image-url("plus.png") no-repeat 95% center;
+								//width: 20px;
+								//height: 20px;
+								@extend .sprites-plus;
+							}
 						}
 						&[data-ur-state="enabled"]{
 						  > .menu_indicator {
-							background: image-url("minus.png") no-repeat 95% center;
-							width: 13px;
-							height: 13px;
-						 }
+								//background: image-url("minus.png") no-repeat 95% center;
+								//width: 13px;
+								//height: 13px;
+								@extend .sprites-minus;
+							}
 						}
 					}
 					ul{
-						background-color: #e6e6e6;
-						border-left: 1px solid #5f0f02;
-						border-right: 1px solid #5f0f02;
-						border-radius: 0 0 5px 5px;
-						-webkit-padding-start: 0px;
-						-webkit-margin-before: 0em;
-						-webkit-margin-after: 0em;
-						border-radius: 0 0 5px 5px;
-						padding: 2px 0 0;
-						overflow: hidden;
+						background-color: $background3;
+						border-left: $border2;
+						border-right: $border2;
+						@include ul-webkit-padding;
+						@include ul-border-radius-padding;
+						//-webkit-padding-start: 0px;
+						//-webkit-margin-before: 0em;
+						//-webkit-margin-after: 0em;
+						//border-radius: 0 0 5px 5px;
+						//padding: 2px 0 0;
+						//overflow: hidden;
 						li{
 							display: block;
 							width: 100%;
-							border-bottom: 1px solid #5f0f02;
+							border-bottom: $border2;
 							padding: 11px 20px 9px;
-							color: #3D211A;
 							font-size: 13px;
 							font-weight: bold;	
 							a{
