--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -1,16 +1,35 @@
 #header {
-	border-left: 1px solid #5f0f02;
-	border-right: 1px solid #5f0f02;
-	border-bottom: 1px solid #5f0f02;
-	border-top: 1px solid #5f0f02;
-	border-radius: 0 0 5px 5px;
+	border : $border2;
+	//border-radius: 5px 5px 5px 5px;
 	#headerPanel{
 		@include clearfix();
-			@include grad1;	
+		//@include grad1;	
+		background: none repeat scroll 0 0 #FDC400;
+		color: #FFFFFF;
+		font-weight: bold;
+		padding: 0;
 		.logo{
-			margin-left: 20px;
+			//margin-left: 20px;
+			margin: 0;
+			padding-bottom: 10px;
+			text-align: center;
+			//width:106px;
 			a{
-				@include logo_h1;
+				//@include logo_h1;
+				display: block;
+				text-indent:-9999px;
+				//background:image-url("logo.gif") no-repeat;
+				color: #000000;
+				font-size: 22px;
+				font-weight: normal;
+				text-shadow: 0 -1px rgba(0, 0, 0, 0.9);
+				#logo-img{
+					text-align:center;
+					img {
+						display:block;
+						margin:0 auto;
+					}
+				}
 			}
 		}
 			
@@ -19,12 +38,13 @@
 			#nav-bar{
 				#nav-toggler{
 					display: block;
-					background: image-url("menu.png") no-repeat 95% center;
-					width: 60px;
+					background: image-url("menu.png") no-repeat scroll 95% center rgba(0, 0, 0, 0);
 					height: 33px;
-					position: relative;
-					float: right;
-					margin: -50px 80px 0px 0px;
+					margin: 0;
+					position: absolute;
+					right: 10px;
+					top: 10px;
+					width: 60px;
 				}
 				
 				ul{
@@ -33,28 +53,46 @@
 					padding:0px;
 					width: 100%;*/
 					@include clearfix();
-					-webkit-padding-start: 0px;
+					@include ul-webkit-padding;
+					//-webkit-padding-start: 0px;
 					li{
 						display: block;
 						padding: 0 6px 1px;
+						
 						a{
-							font-size : $h2_size;
+							border-bottom: 1px solid #C0BCA3;
+							color: #3D211A;
 							display: block;
+							font-size: 19px;
 							padding: 11px 10px 10px;
-							color: #3d211a;
-							text-shadow: 1px 1px 0px white;
-							border-bottom: 1px solid #c0bca3;
+							//text-shadow: 1px 1px 0 #FFFFFF;
+						
+						
+							//font-size : 14pt;
+							//display: block;
+							//padding: 0px 12px;
+							//color: #3d211a;
+							//text-shadow: 1px 1px 0px white;
+							//border-bottom: 1px solid #c0bca3;
 							>.arrow-indicator{
-								background: image-url("menu_go.png") no-repeat 95% center;
-								width: 9px;
-								height: 13px;
-								float:right;
+								//background: image-url("menu_go.png") no-repeat 95% center;
+								//width: 9px;
+								//height: 13px;
+								//float:right;
+								@extend .sprites-arrow-indicator;
 							}
 						}
 					}
 					
 					
 				
+				}
+				ul:before ,ul:after {
+					content: "";
+					display: table;
+				}
+				ul:after {
+					clear: both;
 				}
 			}
 			dl{
@@ -65,21 +103,33 @@
 				display:block;
 				margin-left: 50%;*/
 				
-				position: relative;
-				float: right;
-				margin: -40px 10px 0px 0px;
+				left: 10px;
+				position: absolute;
+				top: 0;
+
+				
+				//position: relative;
+				//float: right;
+				//margin: -40px 10px 0px 0px;
 				dt{
 					position: relative;
 					float: left;
 					margin: 0px;
 					padding: 0px;
+					
+		
+					
 					a{
-						background: image-url("language-select.png") no-repeat 95% center;
-						display: block;
-						width: 40px;
+						background: image-url("language-select.png") no-repeat scroll 95% center rgba(0, 0, 0, 0);
 						height: 21px;
-						padding: 0 9px;
+						left: 0;
 						line-height: 21px;
+						padding: 0 9px;
+						position: absolute;
+						top: 0;
+						width: 40px;
+						
+
 					}	
 				}
 				dd {
@@ -91,17 +141,24 @@
 					top: 23px;
 					position: absolute;
 					margin-left: 0px;
+					
+
 					ul{
-						background: #e6e6e6 none repeat scroll 0 0;
+						//background: $background3;
+						background: none repeat scroll 0 0 #E6E6E6;
 						display: none;
-						list-style: none;
-						border: 1px solid #000000;
+						list-style: none outside none;
+						border: $border3;
 						z-index: 10000;
 						position: relative;
 						width: auto;
 						//min-width: 58px;
-						-webkit-padding-start: 0px;
+						@include ul-webkit-padding;
+						//-webkit-padding-start: 0px;
+						
+  
 						li{
+							//padding: 10px 5px 0px;
 							padding: 5px 10px 20px;
 						}
 					
@@ -117,38 +174,55 @@
 				position: relative;
 				float: left;
 				width: 100%;
+				
 				#main-nav{
 					float: left;
-					margin: 10px 0 0 0;
-					padding: 4px 0 0;
+					//margin: 10px 0 0 0;
+					//padding: 4px 0 0;
 					font-size: 26px;
+					   margin: 0;
+				   	padding: 0;
+					width: 100%;
 					line-height: 30px;
+					background: none repeat scroll 0 0 #90D5F2;
+    
+    
 					
 					li{
 						display: inline;
 						position: relative;
 						
 						a{
-							font-size : $h2_size;
+							font-size : $font_size;
 							font-weight:bold;
 							float: left;
-							padding: 8px 12px;
+							//padding: 8px 12px;
 							height: 30px;
-							color: #262626;
+							//color: #262626;
 							text-decoration: none;
-							border-right: 1px solid #FDC400;
+							border-right: $border5;
+							color: #000000;
+							padding: 5px 22px;
+    
 							
 						}	
 					}
 				}	
 				.service-block{
-					position: relative;
+					/*position: relative;
 					float: right;
 					padding: 11px 0 0 24px;
-					color:#336699;
+					color:#336699;*/
+					
+					clear: both;
+					color: #000000;
+					padding: 10px 0;
+					position: relative;
+					text-align: center;
+					
 					strong{
 						display: block;
-						font-size: 13px;
+						font-size: $font_size;
 						line-height: 14px;
 						font-weight: bold;
 					}		
@@ -180,24 +254,35 @@
 		
 		}
 	}	
-	
+	#headerPanel:before, #headerPanel:after {
+		content: "";
+		display: table;
+	}	
+	#headerPanel:after {
+		clear: both;
+	}
 	
 }
 
 
 .breadcrumbs-block{
+display:none;
 	strong{
+	
 		position:relative;
 		float:left;
 		color:$color2;
 	}
 	ul li{
-		list-style:none;
+		list-style:none outside none;
 		display:inline;
 		margin-left:2%;
+		
+		
 		a{
 			color:$color1;
 			text-decoration:underline;
+			
 		}
 	}
 	
