--- a/assets/stylesheets/pages/_home.scss
+++ b/assets/stylesheets/pages/_home.scss
@@ -157,19 +157,19 @@
 						&[data-ur-state="disabled"]{
 							
 						  > .menu_indicator {
-							//background: image-url("plus.png") no-repeat 95% center;
-							//width: 20px;
-							//height: 20px;
-							@extend .sprites-plus;
+							background: image-url("plus.png") no-repeat 95% center;
+							width: 20px;
+							height: 20px;
+							//@extend .sprites-plus;
 
 						  }
 						}
 						&[data-ur-state="enabled"]{
 						  > .menu_indicator {
-							//background: image-url("minus.png") no-repeat 95% center;
-							//width: 13px;
-							//height: 13px;
-							@extend .sprites-minus;
+							background: image-url("minus.png") no-repeat 95% center;
+							width: 13px;
+							height: 13px;
+							//@extend .sprites-minus;
 						 }
 						}
 					}
@@ -246,10 +246,10 @@
 						}
 						&[data-ur-state="enabled"]{
 						  > .menu_indicator {
-								//background: image-url("minus.png") no-repeat 95% center;
-								//width: 13px;
-								//height: 13px;
-								@extend .sprites-minus;
+								background: image-url("minus.png") no-repeat 95% center;
+								width: 13px;
+								height: 13px;
+								//@extend .sprites-minus;
 							}
 						}
 					}
