--- a/assets/stylesheets/pages/contact/_general-enquiry.scss
+++ b/assets/stylesheets/pages/contact/_general-enquiry.scss
@@ -54,25 +54,25 @@
 						}
 					}
 					input.textwide {
-						/*background: image-url("page-sprite.png")  no-repeat scroll 0 -1537px transparent;
+						background: image-url("page-sprite.png")  no-repeat scroll 0 -1537px transparent;
 						border: medium none;
 						color: #545454;
 						margin: 0;
 						width:237px;
-						padding: 6px 5px;*/
-						@extend .text-input;
+						padding: 6px 5px;
+						//@extend .text-input;
 					}
 					textarea.textarea-380{
-						/*background: image-url("page-sprite.png") no-repeat scroll 0 -1095px transparent;
+						background: image-url("page-sprite.png") no-repeat scroll 0 -1095px transparent;
 						border: medium none;
 						color: #545454;
 						margin: 0;
 						padding: 5px 8px 12px 5px;
 						width: 237px;
 						height: 143px;
-						resize: none;*/
+						resize: none;
 						
-						@extend .textarea-input;
+						//@extend .textarea-input;
 					}
 					.btn-submit{
 						@include button;
