--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -4,7 +4,7 @@
 	#headerPanel{
 		@include clearfix();
 		//@include grad1;	
-		background: none repeat scroll 0 0 #FDC400;
+		background: none repeat scroll 0 0 #FFFFFF;
 		color: #FFFFFF;
 		font-weight: bold;
 		padding: 0;
@@ -14,6 +14,8 @@
 			padding-bottom: 10px;
 			text-align: center;
 			//width:106px;
+			//float: left;
+			position: relative;
 			a{
 				//@include logo_h1;
 				display: block;
@@ -25,11 +27,29 @@
 				text-shadow: 0 -1px rgba(0, 0, 0, 0.9);
 				#logo-img{
 					text-align:center;
+					margin-top: 1%;
+					margin-left: 1%;
 					img {
 						display:block;
-						margin:0 auto;
+						//margin:0 auto;
 					}
+					
 				}
+			}
+			strong{
+				float: left;
+				font-size: 20px;
+				//position: relative;
+				overflow: hidden;
+				position: absolute;
+				left: 33%;
+				top: 50%;
+				margin: 1px 0;
+				background:image-url("slogan.gif") no-repeat;
+				width: 230px;
+				height: 33px;
+				text-indent: -9999px;
+				overflow: hidden;
 			}
 		}
 			
@@ -184,7 +204,7 @@
 				   	padding: 0;
 					width: 100%;
 					line-height: 30px;
-					background: none repeat scroll 0 0 #90D5F2;
+					background: none repeat scroll 0 0 #FDC400;
     
     
 					
