--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -27,7 +27,8 @@
 				text-shadow: 0 -1px rgba(0, 0, 0, 0.9);
 				#logo-img{
 					text-align:center;
-					
+					margin-top: 1%;
+					margin-left: 1%;
 					img {
 						display:block;
 						//margin:0 auto;
