--- a/assets/stylesheets/globals/_lib.scss
+++ b/assets/stylesheets/globals/_lib.scss
@@ -1,7 +1,7 @@
 @mixin footer {
  
   //background-color: $background2;
-  background: none repeat scroll 0 0 #FDC400;
+  background: none repeat scroll 0 0 #FFFFFF;
   border: 1px solid $color1;
   border-radius: 5px 5px 5px 5px;
   //@include background($grad1);
