--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -45,3 +45,4 @@
 @import "pages/contact/_booking_inquiry";
 @import "pages/contact/_customer-request";
 @import "pages/contact/_team-vienna";
+@import "pages/contact/_sucess";
