--- a/assets/stylesheets/pages/_info-service.scss
+++ b/assets/stylesheets/pages/_info-service.scss
@@ -4,13 +4,14 @@
 		padding:1%;
 		margin:1%;
 		#c12267{
-			background-color:$background4;
+			/*background-color:$background4;
 			margin: 1%;
 			padding: 0;
 			border: 0;
 			font-size: 100%;
 			font: inherit;
-			vertical-align: baseline;
+			vertical-align: baseline;*/
+			@include contact-basic;
 			.csc-textpic{
 				overflow:hidden;
 			}
@@ -45,12 +46,14 @@
 				}
 			}
 			.csc-textpic-text{
-				margin: 0;
+				/*background-color:$background4;
+				margin: 1%;
 				padding: 0;
 				border: 0;
 				font-size: 100%;
 				font: inherit;
-				vertical-align: baseline;
+				vertical-align: baseline;*/
+				@include contact-basic;
 				.bodytext {
 					font: normal normal 400 14px /20px "Segoe UI", "Roboto", "Verdana";
 					color: #545454 !important;
@@ -61,7 +64,7 @@
 			}
 		}
 		#c12273{
-			background-color:$background4;
+			background-color:$background2;
 			margin:1%;
 			padding:1%;
 			h3 {
