--- a/assets/stylesheets/pages/contact/_booking_inquiry.scss
+++ b/assets/stylesheets/pages/contact/_booking_inquiry.scss
@@ -3,6 +3,7 @@
 	margin:1%;
 	color: #545454;
 	font: 1.2em /1.5em "Segoe UI", "Roboto", "Verdana";
+
 	
 	#c10413{
 		/*background-color:$background4;
@@ -150,6 +151,6 @@
 		}
 	}
 }
-.selectArea   {
-	display:none;
-}
+/*.selectArea   {
+	//display:none;
+}*/
