--- a/assets/stylesheets/pages/contact/_informationClubMagicLife.scss
+++ b/assets/stylesheets/pages/contact/_informationClubMagicLife.scss
@@ -3,6 +3,7 @@
 	margin:1%;
 	color: #545454;
 	font: 1.2em /1.5em "Segoe UI", "Roboto", "Verdana";
+
 	
 	#c9806{
 		/*background-color:$background4;
@@ -80,7 +81,12 @@
 						margin-left: 100px;
 					}
 					a.selectButton{
-					
+						position: absolute;
+						top: 0;
+						right: 0;
+						width: 100%;
+						height: 100%;
+						background: image-url("btn-select.gif")  no-repeat 100% 0;
 					}
 					
 					label{
