--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -1,10 +1,10 @@
 #header {
-	border : $border2;
+	//border : $border2;
 	//border-radius: 5px 5px 5px 5px;
 	#headerPanel{
 		@include clearfix();
 		//@include grad1;	
-		background: none repeat scroll 0 0 #FFFFFF;
+		//background: none repeat scroll 0 0 #FFFFFF;
 		color: #FFFFFF;
 		font-weight: bold;
 		padding: 0;
@@ -13,19 +13,22 @@
 			margin: 0;
 			padding-bottom: 10px;
 			text-align: center;
-			//width:106px;
-			//float: left;
+			width:100%;
+			height:100%;
+			float: left;
 			position: relative;
 			a{
 				//@include logo_h1;
 				display: block;
 				text-indent:-9999px;
-				//background:image-url("logo.gif") no-repeat;
-				color: #000000;
-				font-size: 22px;
-				font-weight: normal;
-				text-shadow: 0 -1px rgba(0, 0, 0, 0.9);
+				background:image-url("logo.gif") no-repeat;
+				height: 120px;
+				//color: #000000;
+				//font-size: 22px;
+				//font-weight: normal;
+				//text-shadow: 0 -1px rgba(0, 0, 0, 0.9);
 				#logo-img{
+					display:none;
 					text-align:center;
 					margin-top: 1%;
 					margin-left: 1%;
@@ -64,11 +67,12 @@
 					height: 33px;
 					margin: 0;
 					position: absolute;
-					right: 10px;
+					//right: 10%;
 					top: 10px;
 					width: 60px;
+					right: 18%;
+					float: right;
 				}
-				
 				ul{
 					/*float:left;
 					margin-top:-1px;
@@ -82,7 +86,7 @@
 						padding: 0 6px 1px;
 						
 						a{
-							border-bottom: 1px solid #C0BCA3;
+							border-bottom: 1px solid #c0bca3;
 							color: #3D211A;
 							display: block;
 							font-size: 19px;
@@ -109,6 +113,14 @@
 					
 				
 				}
+				#nav{
+					//background: none repeat scroll 0 0 #ffffff;
+					li{
+						a{
+							border-bottom: 1px solid #000000;
+						}				
+					}
+				}
 				ul:before ,ul:after {
 					content: "";
 					display: table;
@@ -125,10 +137,14 @@
 				display:block;
 				margin-left: 50%;*/
 				
-				left: 10px;
+				//left: 10px;
+				//position: absolute;
+				//top: 0;
+				
 				position: absolute;
 				top: 0;
-
+				right: 17.5%;
+				float: right;
 				
 				//position: relative;
 				//float: right;
