--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -46,3 +46,4 @@
 @import "pages/contact/_customer-request";
 @import "pages/contact/_team-vienna";
 @import "pages/contact/_sucess";
+@import "pages/_precheckin";
