--- a/assets/stylesheets/pages/contact/_team-vienna.scss
+++ b/assets/stylesheets/pages/contact/_team-vienna.scss
@@ -63,6 +63,66 @@
 					//text-align: center;
 					//width: 100%;
 				}
+				.tx-wecstaffdirectory-staffpage{
+					.photo{
+						width: 60%;
+						margin: 0 auto;
+					}
+					.maincontent{
+					
+						.tx-wecstaffdirectory-fieldHeaderLarge{
+							font-size: 18px;
+							font-weight: bold;
+							width: 60%;
+							margin: 0 auto;
+						}
+						.tx-wecstaffdirectory-fieldHeader{
+							display: block;
+							float: left;
+							font-size: 14px;
+							font-weight: bold;
+							margin-bottom: 2px;
+							margin-top: 8px;
+							width: 100%;
+						}
+						.tx-wecstaffdirectory-fieldLabel {
+							clear: left;
+							display: block;
+							float: left;
+							padding-bottom: 2px;
+							padding-left: 8px;
+							width: 35%;
+							font-size:$font_size;
+						}
+						.tx-wecstaffdirectory-fieldDescription {
+							display: block;
+							float: left;
+							padding-bottom: 2px;
+							width: 60%;
+							font-size:$font_size;
+							a {
+								color: #1480ee;
+								text-decoration: none;
+								word-wrap: break-word;
+							}
+						}
+					}
+					.topmenu{
+						.sep{
+							a{
+								margin:1%;
+								color: #1480ee;
+								font-size:9pt;
+							}
+						}
+						select{
+							font-size:8pt;
+							margin:1%;
+						}
+					
+					}
+					
+				}
 				
 			}
 			.tx-wecstaffdirectory-fullWidthCentered{
