--- a/assets/stylesheets/pages/_home.scss
+++ b/assets/stylesheets/pages/_home.scss
@@ -46,6 +46,7 @@
 					}
 					> .menu_indicator {
 						  float: right;
+						  margin-right: 6px;
 					}
 					border: $border2;
 					font-size: 14px;
