--- a/assets/stylesheets/pages/_home.scss
+++ b/assets/stylesheets/pages/_home.scss
@@ -19,6 +19,7 @@
 				overflow: hidden;
 				visibility: hidden;
 				position: relative;
+				padding-top: 1%;
 				.swipe-wrap {
 					overflow: hidden;
 					position: relative;
