--- a/assets/stylesheets/sections/_footer.scss
+++ b/assets/stylesheets/sections/_footer.scss
@@ -4,6 +4,7 @@
 	  padding: 14px 10px;
 	  height: 72px;
 	  font-weight: normal;
+	  margin-top: 2%;
 	  div .container-holder{
 			text-align: center;
 			#trusted_shops_bottom{
@@ -33,7 +34,7 @@
 				a{
 					width:154px;
 					height:53px;
-					background: image-url("tui-logo.PNG") no-repeat 95% center;
+					background: image-url("tui-logo.png") no-repeat 95% center;
 					display: block;
 					text-indent:-9999px;
 				}
