--- a/assets/stylesheets/sections/_footer.scss
+++ b/assets/stylesheets/sections/_footer.scss
@@ -34,7 +34,7 @@
 				a{
 					width:154px;
 					height:53px;
-					background: image-url("tui-logo.png") no-repeat 95% center;
+					background: image-url("tui-logo.PNG") no-repeat 95% center;
 					display: block;
 					text-indent:-9999px;
 				}
