--- a/assets/stylesheets/pages/contact/_informationClubMagicLife.scss
+++ b/assets/stylesheets/pages/contact/_informationClubMagicLife.scss
@@ -56,7 +56,7 @@
 						}
 					}
 					input.textwide {
-						background: image-url("page.png")  no-repeat scroll 0 -1537px transparent;
+						background: image-url("page-sprite.png")  no-repeat scroll 0 -1537px transparent;
 						border: medium none;
 						color: #545454;
 						margin: 0;
@@ -65,7 +65,7 @@
 						//@extend .text-input;
 					}
 					textarea.textarea-380{
-						background: image-url("page.png") no-repeat scroll 0 -1095px transparent;
+						background: image-url("page-sprite.png") no-repeat scroll 0 -1095px transparent;
 						border: medium none;
 						color: #545454;
 						margin: 0;
