--- a/assets/stylesheets/pages/_home.scss
+++ b/assets/stylesheets/pages/_home.scss
@@ -195,7 +195,7 @@
 			
 			}
 			.links-block{
-				margin-top: 20px;
+				margin-top: 2%;
 				.bodytext{
 					h2{
 						color:black;
@@ -277,8 +277,8 @@
 				}
 			}
 			.top-block{
-					margin-top: 20px;
-					margin-bottom: 20px;
+					margin-top: 1%;
+					//margin-bottom: 20px;
 					h2{
 						color:black;
 						font-size:$h2_size;
